root topic tooltip fix alignment

--- a/src/style.css
+++ b/src/style.css
@@ -555,3 +555,8 @@ position: fixed;
   position: absolute;
   right: 0;
 }
+
+#topicInputWrapper {
+  display: flex;
+  align-items: center;
+}
